--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Bibiruu/simple-storage-blockchain#readme",
   "dependencies": {
     "static-server": "^3.0.0",
-    "truffle": "^5.7.3"
+    "truffle": "^5.7.3",
+    "web3": "^4.6.0"
   }
 }
